# heraclitus

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: lib.rs  main.rs  parser.rs
src/compiler/: compiler.rs  lexer.rs  mod.rs  token.rs
src/compiler/lexer/: compound_handler.rs  lexer.rs  mod.rs  reader.rs  region_handler.rs
src/compiler/logger/: displayer.rs  error_details.rs  file_resolution.rs  logger.rs  message.rs  mod.rs
src/compiler/parser/: metadata.rs  mod.rs  pattern.rs  preset.rs  syntax_module.rs  util.rs
src/compiling/: compiler.rs  mod.rs  token.rs
src/compiling/failing/: failure.rs  logger.rs  message.rs  mod.rs  position_info.rs
src/compiling/lexing/: compound_handler.rs  lexer.rs  lexer_static.rs  mod.rs  reader.rs  region_handler.rs
src/compiling/logging/: displayer.rs  error_details.rs  logger.rs  mod.rs
src/compiling/parser/: metadata.rs  mod.rs  pattern.rs  preset.rs  syntax_module.rs
src/compiling_rules/: region.rs  rules.rs
src/rules/: context.rs  mod.rs  region.rs  rules.rs
tests/: arith.rs  cobra.rs  lexer.rs
tests/arith_modules/: add.rs  expr.rs  mod.rs  number.rs
tests/cobra_modules/: block.rs  expr.rs  if_statement.rs  mod.rs  text.rs
