[package]
name = "heraclitus-compiler"
version = "1.5.9"
edition = "2021"
description = "Compiler frontend for developing great programming languages"
license = "MIT"
repository = "https://github.com/Ph0enixKM/Heraclitus"
authors = ["pawel.karas@icloud.com"]
keywords = ["heraclitus", "compiler", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
pad = "0.1.6"
capitalize = "0.3.4"
